cluster-config/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ui-dev
  labels:
    app.kubernetes.io/part-of: retail-store
    environment: dev
    istio-injection: enabled 
---
apiVersion: v1
kind: Namespace
metadata:
  name: catalog-dev
  labels:
    app.kubernetes.io/part-of: retail-store
    environment: dev
    istio-injection: enabled 
---
apiVersion: v1
kind: Namespace
metadata:
  name: cart-dev
  labels:
    app.kubernetes.io/part-of: retail-store
    environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: checkout-dev
  labels:
    app.kubernetes.io/part-of: retail-store
    environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: orders-dev
  labels:
    app.kubernetes.io/part-of: retail-store
    environment: dev
